# TorrentClient

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  clang-format
include/: bencodeparse.hpp  file_structure.hpp  filesystem.hpp  lazyTorrentFile.hpp  torrentBaseTypes.hpp  torrentFileInfo.hpp
include/parser/: bencodeparse.hpp
include/parser/readers/: DataReader.hpp  SimpleDataReader.hpp  data_reader.hpp
include/parser/torrent_files/: LazyProperty.hpp  lazyTorrentFile.hpp  torrent_file_base.hpp
src/: file_structure.cpp  filesystem.cpp  main.cpp
src/bencodeParse/: SimpleDataReader.cpp  bencodeElem.cpp  bencodeparse.cpp  parser.cpp  parser_aux.cpp
src/bencodeParse/readers/: DataReader.cpp  SimpleDataReader.cpp
src/torrentFiles/: lazyTorrentFile.cpp  referringTorrentFile.cpp  torrentFileInfo.cpp
test/: SimpleDataReader_tests.cpp  bencodeParseTests.cpp  file_structureTests.cpp  filesystemTests.cpp  lazyTorrentTest.cpp  test-main.cpp
test/testfiles/: fake.torrent  testfile.txt  wrongformat.torrent
